content script injection testing

--- a/devtools.html
+++ b/devtools.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+  <!-- <script src="./background.js"></script> -->
   <script src="./devtools.js"></script>
 </head>
 </html>
