--- a/Example/index.html
+++ b/Example/index.html
@@ -17,11 +17,11 @@
 			renderer.setSize( window.innerWidth, window.innerHeight );
 			document.body.appendChild( renderer.domElement );
 // 3, 3, 3
-			const geometry = new THREE.BoxGeometry(3, 3, 3);
+			const geometry = new THREE.BoxGeometry();
 			const material = new THREE.MeshBasicMaterial( { color: 0xcf27ff } );
 			const cube = new THREE.Mesh( geometry, material );
 			const cube2 = new THREE.Mesh( geometry, new THREE.MeshBasicMaterial( { color: 0xffffff } ) );
-			const cube3 = new THREE.Mesh( geometry, new THREE.MeshBasicMaterial( { color: 'blue' } ) );
+			const cube3 = new THREE.Mesh( geometry, new THREE.MeshBasicMaterial( { color: 'yellow' } ) );
 			scene.add( cube );
 			scene.add( cube2 );
 			scene.add( cube3 );
